added info to our story-deleted from home, added photos, updated contact_us link

--- a/css/full-width-pics.css
+++ b/css/full-width-pics.css
@@ -17,12 +17,12 @@ body {
 }
 
 .image-bg-fluid-height {
-	background: url(../images/ourstorybg.jpg) no-repeat center center scroll;
+	background: url(../images/story1.jpg) no-repeat center center scroll;
     padding: 100px 0;
 }
 
 .image-bg-fixed-height {
-	background: url(../images/ourstorybg3.jpg) no-repeat center center scroll;
+	background: url(../images/story2.jpg) no-repeat center center scroll;
     height: 450px;
 }
 
