--- a/css/full-width-pics.css
+++ b/css/full-width-pics.css
@@ -51,6 +51,61 @@ footer {
     margin: 50px 0;
 }
 
+
+
+
+/* Splash page */
+.splash-page .header-wrap {
+ position: relative;
+ background: none;
+}
+.splash-page .header-wrap:before {
+ position: absolute;
+}
+.splash-page .splash-wrap {
+ position: relative;
+ z-index: 6;
+ display: table;
+ width: 100%;
+ height: 100%;
+ min-height: 100vh;
+ background: url(../images/storypage.jpg) no-repeat;
+ background-attachment: fixed !important;
+ background-size: cover;
+ box-sizing: border-box;
+}
+.splash-page .nav-wrap {
+ display: table-header-group;
+}
+.splash-page .main-wrap {
+ display: table-cell;
+ vertical-align: middle;
+}
+.splash-page #content-section {
+ overflow-y: visible;
+ padding: 3em 4em;
+ margin: 40px auto;
+ width: 750px;
+ max-height: 1200px;
+ background: rgba(255, 255, 255, 0.85);
+ box-sizing: border-box;
+}
+.splash-page #content-section h2 {
+ text-align: center !important;
+ text-transform: uppercase;
+ font-family: 'Quicksand';
+ font-size: 3.5em;
+ font-weight: 300;
+ line-height: normal;
+}
+.splash-page #content-section p {
+ color: #3b3b3b;
+ text-align: center !important;
+}
+.splash-page #footer-wrap {
+ display: none;
+}
+
 @media(max-width:768px) {
     section {
         padding-top: 25px;
