--- a/css/half-slider.css
+++ b/css/half-slider.css
@@ -12,7 +12,7 @@ body {
 /* You can change the height of the carousel by changing the height in the class below. It is set to 50% by default, but can be any height! */
 
 .carousel {
-    height: 50%;
+    height: 40%;
 }
 
 .item,
@@ -35,4 +35,55 @@ body {
 
 footer {
     margin: 50px 0;
+}
+
+.overlay { 
+  color: #fff;
+  position:absolute;
+  z-index:12;
+  top:30%;
+  left:0;
+  width:100%;
+  text-align:center;
+  font-family: 'Quicksand';
+  font-weight: 700;
+  font-size: 62px;
+}
+
+.overlay h1 {
+	color: #fff;
+}
+
+.cover{
+	background-color: rgba(0,0,0,0.2);
+}
+
+/* Carousel base class */
+.carousel {
+  margin-bottom: 60px;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 1;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  height: 400px;
+  background-color:#555;
+}
+.carousel img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 400px;
+}
+
+@media (min-width: 768px) {
+	/* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 1.4;
+  }
 }
