--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1086,7 +1086,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: 'Quicksand';
+  font-family: 'Poppins';
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
@@ -1123,7 +1123,7 @@ img {
 .img-responsive,
 .thumbnail > img,
 .thumbnail a > img,
-.carousel-inner > .item > img,
+.carousel-inner > .item active > img,
 .carousel-inner > .item > a > img {
   display: block;
   max-width: 100%;
@@ -1188,10 +1188,10 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: 'Poppins';
+  font-family: 'Quicksand';
   font-weight: 600;
   line-height: 1.1;
-  color: #2cacd7;
+  color: #fa1861;
 }
 h1 small,
 h2 small,
@@ -1219,7 +1219,7 @@ h6 .small,
 .h6 .small {
   font-weight: normal;
   line-height: 1;
-  color: #fa1861;
+  color: #0ea2da;
 }
 h1,
 .h1,
@@ -3085,10 +3085,10 @@ fieldset[disabled] .btn-default.active {
   background-color: #333;
 }
 .btn-primary {
-  color: #fff;
-  background-color: transparent;
-  border-color: #fff;
-  font-family: 'Poppins';
+  color: #0ea2da;
+  background-color: #fff;
+  border-color: #0ea2da;
+  font-family: 'Quicksand';
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -3096,9 +3096,9 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-  color: #fff;
-  background-color: transparent;
-  border-color: #FFF;
+  color: #2cacd7;
+  background-color: rgba(14,162,218,0.20);
+  border-color: #2cacd7;
   font-weight: 500;
 }
 .btn-primary:active,
@@ -3356,7 +3356,6 @@ fieldset[disabled] .btn-link:focus {
   padding: 5px 10px;
   font-size: 12px;
   line-height: 1.5;
-  border-radius: 3px;
 }
 .btn-xs,
 .btn-group-xs > .btn {
@@ -3445,7 +3444,7 @@ tbody.collapse.in {
   background-color: #fff;
   -webkit-background-clip: padding-box;
           background-clip: padding-box;
-  border: 1px solid #ccc;
+  border: 1px solid #fff;
   border: 1px solid rgba(0, 0, 0, .15);
   border-radius: 4px;
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
@@ -3459,7 +3458,7 @@ tbody.collapse.in {
   height: 1px;
   margin: 9px 0;
   overflow: hidden;
-  background-color: #e5e5e5;
+  background-color: #fff;
 }
 .dropdown-menu > li > a {
   display: block;
@@ -3474,7 +3473,7 @@ tbody.collapse.in {
 .dropdown-menu > li > a:focus {
   color: #90D4EA;
   text-decoration: none;
-  background-color: #f5f5f5;
+  background-color: #fff;
 }
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
@@ -3626,6 +3625,12 @@ tbody.collapse.in {
 .btn-group.open .dropdown-toggle {
   outline: 0;
 }
+
+.dropdown-toggle:active, .open .dropdown-toggle {
+	background:#fff !important; 
+	color:#90D4EA !important;
+}
+
 .btn-group > .btn + .dropdown-toggle {
   padding-right: 8px;
   padding-left: 8px;
@@ -4069,7 +4074,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-top-right-radius: 0;
 }
 .navbar {
-  height: 100px;
+  position: relative;
+  min-height: 50px;
+  margin-bottom: 20px;
+  border-bottom: 10px solid #0ea2da;
 }
 @media (min-width: 768px) {
   .navbar {
@@ -4084,14 +4092,14 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-collapse {
   padding-right: 15px;
   padding-left: 15px;
-  overflow-x: visible;
-  -webkit-overflow-scrolling: touch;
+  overflow-x: none;
   border-top: 1px solid transparent;
+  background-color: #fff;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
 }
 .navbar-collapse.in {
-  overflow-y: auto;
+  overflow-y: none;
 }
 @media (min-width: 768px) {
   .navbar-collapse {
@@ -4104,10 +4112,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     display: block !important;
     height: auto !important;
     padding-bottom: 0;
-    overflow: visible !important;
+    overflow: invisible !important;
   }
   .navbar-collapse.in {
-    overflow-y: visible;
+    overflow-y: none;
   }
   .navbar-fixed-top .navbar-collapse,
   .navbar-static-top .navbar-collapse,
@@ -4152,6 +4160,14 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 
+.navbar-fixed-top,
+.navbar-fixed-bottom {
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+}
+
 @media (min-width: 768px) {
   .navbar-fixed-top,
   .navbar-fixed-bottom {
@@ -4187,6 +4203,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     margin-left: -15px;
   }
 }
+
+@media (max-width: 767px) {
+  .homemiddle{
+	  40px;
+  }
+}
 .navbar-toggle {
   position: relative;
   float: right;
@@ -4194,7 +4216,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-top: 8px;
   margin-right: 15px;
   margin-bottom: 8px;
-  background-color: transparent;
+  background-color: fff;
   background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -4206,7 +4228,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   display: block;
   width: 22px;
   height: 2px;
-  border-radius: 1px;
+  border-radius: 5px;
 }
 .navbar-toggle .icon-bar + .icon-bar {
   margin-top: 4px;
@@ -4392,6 +4414,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: #f8f8f8;
   border-color: #e7e7e7;
 }
+
 .navbar-default .navbar-brand {
   color: #777;
 }
@@ -4485,10 +4508,14 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 .navbar-inverse {
-  background-color: #FBFBFB;
+  background-color: rgba(255,255,255,1);
+  border-bottom: 15px solid #0ea2da;
+  color: fff;
+  padding-top: 25px;
+  padding-bottom: 17px;
 }
 .navbar-inverse .navbar-brand {
-  color: #9d9d9d;
+  color: #fff;
 }
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
@@ -4499,18 +4526,18 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #2cacd7;
 }
 .navbar-inverse .navbar-nav > li > a {
-  color: #2cacd7;
+  color: #0ea2da;
 }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
   color: #90D4EA;
-  background-color: transparent;
+  background-color: #fff;
 }
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
   color: #90D4EA;
-  background-color: transparent;
+  background-color: #fff;
   
 }
 .navbar-inverse .navbar-nav > .disabled > a,
@@ -4520,18 +4547,20 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   background-color: transparent;
 }
 .navbar-inverse .navbar-toggle {
-  border-color: #333;
+  border-color: #fff;
+  background-color: #0ea2da;
+  border-radius: 0px;
 }
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
-  background-color: #333;
+  background-color: #90D4EA;
 }
 .navbar-inverse .navbar-toggle .icon-bar {
   background-color: #fff;
 }
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
-  border-color: #101010;
+  border-color: #fff;
 }
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
@@ -4548,17 +4577,18 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
     color: #0ea2da;
+	text-align: center;
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #0ea2da;
-    background-color: transparent;
+    color: #90D4EA;
+    background-color: #FFF;
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #0ea2da;
-    background-color: transparent;
+    color: #90D4EA;
+    background-color: #FFF;
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:hover,
@@ -5296,6 +5326,14 @@ a.list-group-item-danger.active:focus {
 .list-group-item-text {
   margin-bottom: 0;
   line-height: 1.3;
+}
+
+.footer-wrapper {
+	background-color: #0ea2da;
+	padding: 40px;
+	color: #fff;
+}
+
 }
 .panel {
   margin-bottom: 20px;
