--- a/css/full-width-pics.css
+++ b/css/full-width-pics.css
@@ -7,6 +7,35 @@
 body {
 }
 
+.container-1 {
+	background-color: #0ea2da;
+	padding-right: 50px;
+    padding-left: 425px;
+    margin-right: auto;
+    margin-left: auto;
+
+}
+
+.breakfoot {
+	display: none;
+}
+
+
+@media (max-width: 767px) {
+.container-1 {
+	background-color: #0ea2da;
+	padding-right: 50px;
+    padding-left: 50px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.breakfoot {
+	display:block;
+}
+
+}
+
 .image-bg-fluid-height,
 .image-bg-fixed-height {
     text-align: center;
@@ -52,8 +81,6 @@ footer {
 }
 
 
-
-
 /* Splash page */
 .splash-page .header-wrap {
  position: relative;
@@ -69,7 +96,7 @@ footer {
  width: 100%;
  height: 100%;
  min-height: 100vh;
- background: url(../images/storypage.jpg) no-repeat;
+ background: url(../images/minimonster2.jpg) no-repeat;
  background-attachment: fixed !important;
  background-size: cover;
  box-sizing: border-box;
@@ -115,4 +142,8 @@ footer {
     .section-heading {
         font-size: 2em;
     }
+	
+	.splash-page #content-section {
+		width: 400px;
+	}
 }
